--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,8 +9,13 @@
 
     <TextView
         android:id="@+id/tvUsername"
-        android:layout_width="match_parent"
+        android:layout_width="69dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="109dp"
+        android:layout_toEndOf="@+id/ivProfileImage"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         tools:text="steve" />
 
@@ -18,6 +23,10 @@
         android:id="@+id/ivImage"
         android:layout_width="match_parent"
         android:layout_height="300dp"
+        android:layout_below="@+id/ivProfileImage"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="15dp"
         android:scaleType="centerCrop"
         tools:srcCompat="@tools:sample/avatars" />
 
@@ -25,8 +34,61 @@
         android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_below="@+id/ivImage"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="42dp"
         tools:text="On the ground" />
 
+    <ImageView
+        android:id="@+id/ivProfileImage"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        tools:srcCompat="@tools:sample/avatars" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/ivHeart"
+        android:layout_width="17dp"
+        android:layout_height="17dp"
+        android:layout_below="@+id/ivImage"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="15dp"
+        app:srcCompat="@drawable/ufi_heart" />
+
+    <ImageView
+        android:id="@+id/ivSave"
+        android:layout_width="17dp"
+        android:layout_height="17dp"
+        android:layout_below="@+id/ivImage"
+        android:layout_marginStart="275dp"
+        android:layout_marginTop="15dp"
+        android:layout_toEndOf="@+id/ivNewDirect"
+        app:srcCompat="@drawable/ufi_save_icon" />
+
+    <ImageView
+        android:id="@+id/ivNewDirect"
+        android:layout_width="17dp"
+        android:layout_height="17dp"
+        android:layout_below="@+id/ivImage"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_toEndOf="@+id/ivComment"
+        app:srcCompat="@drawable/ufi_new_direct" />
+
+    <ImageView
+        android:id="@+id/ivComment"
+        android:layout_width="17dp"
+        android:layout_height="17dp"
+        android:layout_below="@+id/ivImage"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_toEndOf="@+id/ivHeart"
+        app:srcCompat="@drawable/ufi_comment" />
+
+
+</RelativeLayout>
