--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,15 +25,15 @@
             android:id="@+id/ivInstagram"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
-            android:layout_marginStart="55dp"
+            android:layout_marginStart="45dp"
             app:srcCompat="@drawable/nav_logo_whiteout" />
 
         <ImageView
             android:id="@+id/ivInbox"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            app:srcCompat="@drawable/nav_inbox_paper_plane"
-            tools:layout_marginStart="35dp" />
+            android:layout_marginStart="25dp"
+            app:srcCompat="@drawable/nav_inbox_paper_plane" />
 
 
     </androidx.appcompat.widget.Toolbar>
@@ -55,8 +55,8 @@
         android:layout_alignParentBottom="true"
         android:backgroundTint="@color/teal_200"
         app:itemBackground="@color/white"
-        app:itemIconTint="@drawable/bottom_navigation_color_selector"
-        app:itemTextColor="@drawable/bottom_navigation_color_selector"
+        app:itemIconTint="@color/bottom_navigation_color_selector"
+        app:itemTextColor="@color/bottom_navigation_color_selector"
         app:menu="@menu/menu_bottom_navigation" />
 
 </RelativeLayout>
