--- a/app/src/main/res/layout/fragment_take_photo.xml
+++ b/app/src/main/res/layout/fragment_take_photo.xml
@@ -8,6 +8,9 @@
     <Button
         android:id="@+id/btnTakePicture"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:background="@color/purple_200"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text="TAKE PICTURE" />
 </FrameLayout>
